# tulip-plugin-rof-regularization

./: CMakeLists.txt  Cv_Ta.cpp  Cv_Ta.h  README.md  Reg-CV.cpp  Reg-CV.h  Reg-ROF.cpp  Reg-ROF.h
