cmake_minimum_required(VERSION 2.8)

# Look for FindTulip.cmake into the tulip source directory. This will provide macros for Qt files and some other Tulip-related variables
FIND_PACKAGE(TULIP3 REQUIRED)
# Look for FindQt4.cmake to get variables about Qt libraries location.
FIND_PACKAGE(Qt4  REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${QT_INCLUDE_DIR}  ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})	

set(PLUGIN_NAME "Cv_Ta")

SET(LIB_SRCS
	Cv_Ta.cpp
	)

set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_C_FLAGS "-Wall")

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} SHARED ${LIB_SRCS} ${LIB_UI_SRCS} ${LIB_MOC_SRCS} ${LIB_RCC_SRCS})
TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} ${TULIP_LIBRARY} ${TULIP_LIBRARY} ${TULIP_OGL_LIBRARY} ${TULIP_QT4_LIBRARY} ${QT_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} DESTINATION ${TULIP_PLUGINS_PATH})
