CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Tulip-plugin-reg-cv CXX)

FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${QT_INCLUDE_DIR})

SET(PLUGIN_NAME "Reg-CV-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Reg-CV.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES})
INSTALL(TARGETS ${PLUGIN_NAME} DESTINATION ${TULIP_PLUGINS_DIR})
